--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -2,4 +2,16 @@
 :root {
   --vp-c-brand-1: #646cff;
   --vp-c-brand-2: #747bff;
+  --vp-home-hero-name-color: transparent;
+  --vp-home-hero-name-background: -webkit-linear-gradient(
+    120deg,
+    rgb(28, 146, 210),
+    rgb(242, 252, 254)
+  );
+  --vp-home-hero-image-background-image: linear-gradient(
+    to right,
+    rgb(28, 146, 210),
+    rgb(242, 252, 254)
+  );
+  --vp-home-hero-image-filter: blur(150px);
 }
